--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Подписка на продукцию ИД РБК</title>
+<title>Тест</title>
 <script type="text/javascript" src="jquery-1.7.2.min.js"></script>
 <script type="text/javascript" src="jquery.uploader.js"></script>
 <script type="text/javascript">
 $(function(){
 $( '#but' ).click( function() {
-console.log( 123 );
 $.ajaxFileUpload({
 	url: 'upload.php',
 	secureuri: false,
